@@ -1,3 +1,9 @@
+2002-02-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/tc-alpha.c (s_alpha_text): Use obj_elf_text for OBJ_ELF, not
+	s_text.
+	(s_alpha_data): Use obj_elf_data for OBJ_ELF, not s_data.
+
 2002-02-26  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/tc-mips.c (mips_need_elf_addend_fixup): For embedded-PIC
